started wanted employee test